<resources>
    <string name="app_name">TbcHomework9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_android">Continue with Android</string>
    <string name="or">Or</string>
    <string name="sign_in_with_password">Sign in with Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">sign_in</string>
</resources>